[package]
name = "dir_walker"
version = "0.1.0"
edition = "2021"
authors = ["Gabriele Costanza <gabriel.cstnz@protonmail.com>"]
categories = ["file-system"]
description = "Traverse a directory recursively preserving compatbility with the standard library"
keywords = ["file-system", "traversal"]
repository = "https://github.com/gabrielecodes/dir_walker"

[dependencies]
