[package]
name = "dir_walker"
version = "0.1.5"
edition = "2021"
authors = ["Gabriele Costanza <gabriel.cstnz@protonmail.com>"]
categories = ["file-system"]
description = "Traverse a directory recursively preserving compatbility with the standard library"
keywords = ["file-system", "traversal"]
repository = "https://github.com/gabrielecodes/dir_walker"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/dir_walker/latest/dir_walker/"

[dependencies]
